// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic tests should render backgroundClass bg-primary and inline style backgroundColor should not be set 1`] = `
<div
  className="col column-1"
>
  <div
    className="column-inner-container bg-primary"
    style={Object {}}
  />
</div>
`;

exports[`basic tests should render component test with additional background props 1`] = `
<div
  className="col column-1"
>
  <div
    className="column-inner-container"
    style={Object {}}
  />
</div>
`;

exports[`basic tests should render component test with default props 1`] = `
<div
  className="col column-1"
>
  <div
    className="column-inner-container"
    style={Object {}}
  />
</div>
`;

exports[`basic tests should render flexbox classes when isFlex === true 1`] = `
<div
  className="col column-1"
>
  <div
    className="column-inner-container d-flex align-items-center flex-direction-column justify-content-center"
    style={Object {}}
  />
</div>
`;
